--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+html{
+	font-size: 16px;
+
+}
 body{
 	margin: 0 0 0 0;
 	background-color: black;
 	text-align: center;
 	background-image: url(bg-pattern.png)
+}
+h1{
+	font-size: 130%;
 }
 a:hover{
 	color: red;
@@ -15,7 +22,9 @@ h2{
 header{
 	background-image: url(header.jpeg);
 	overflow: hidden;
-	height: 400px;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	height: 380px;
 	font-weight: bold;
 	font-size: large;
 	border: 3px red outset;
@@ -28,10 +37,12 @@ b{
 }
 header p{
 	position: relative;
-	bottom: -135px;
+	margin-top: 13.3422821%;
+	font-size: 100%;
+	background-color: #FFCA30;
 }
 p b{
-	font-size: 24px;
+	font-size: 120%;
 }
 table{
 	background-color: white;
@@ -39,6 +50,8 @@ table{
 	width: 100%;
 	border-spacing: 5px;
 	border-collapse: collapse;
+	font-size: 11px;
+	background-image: url(bg-pattern.png), linear-gradient(to top,#7b4397,#dc2430);
 }
 th{
 	border: 1px solid red;
@@ -53,7 +66,7 @@ footer{
 	position: relative;
 }
 .results{
-	width: 900px;
+	width: 70.422535%;
 	margin: 0px auto 40px auto;
 
 }
@@ -74,8 +87,27 @@ footer{
 	font-size: 23;
 	padding: 17px 0 17px 0;
 }
+.reverseresult{
+	width: 170px;
+	background: red;
+	color: white;
+	float: left;
+	transform: rotate(-13deg);
+	box-shadow: 0 0 -4px -1px rgba(20, 20, 20, 0.8);
+}
+.reverseresult .number{
+	display: block;
+	width: 170px;
+	background: #292b2e;
+	margin: 15px 0 10px 0;
+	font-size: 23;
+	padding: 17px 0 17px 0;
+}
 .table{
 	margin-top: 200px;
+	transform: scale(1);
+	box-shadow: 0 0 -4px -1px rgba(20, 20, 20, 0.8);
+	background-image: url(bg-pattern.png);
 }
 .pastresults{
 	color: white;
