--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
 	background-image: url(bg-pattern.png)
 }
 h1{
-	font-size: 130%;
+	font-size: 150%;
+	color: white;
 }
 a:hover{
 	color: red;
@@ -32,7 +33,7 @@ header::before{
 	border-right: red dashed;
 }
 header{
-	background-image: url(newheader.jpeg);
+	
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	height: 21.11111128em;
@@ -47,9 +48,8 @@ b{
 	color: red;
 }
 header p{
-	position: relative;
-	margin-top: 7em;
-	font-size: 1em;
+	position: fixed;
+	font-size: 2em;
 	background-color: #FFCA30;
 		transform: rotate(-10deg);
 	box-shadow: 0 0 4px 1px rgba(20, 20, 20, 0.8);
@@ -87,7 +87,7 @@ footer{
 
 }
 .result{
-	width: 170px;
+	width: 100%;
 	background: red;
 	color: white;
 	float: left;
@@ -95,30 +95,23 @@ footer{
 	box-shadow: 0 0 4px 1px rgba(20, 20, 20, 0.8);
 
 }
-.result .number{
+ .number{
 	display: block;
-	width: 170px;
+	width: 100%;
 	background: #292b2e;
 	margin: 15px 0 10px 0;
 	font-size: 23;
 	padding: 17px 0 17px 0;
 }
 .reverseresult{
-	width: 170px;
+	width: 100%;
 	background: red;
 	color: white;
 	float: left;
 	transform: rotate(-13deg);
 	box-shadow: 0 0 -4px -1px rgba(20, 20, 20, 0.8);
 }
-.reverseresult .number{
-	display: block;
-	width: 170px;
-	background: #292b2e;
-	margin: 15px 0 10px 0;
-	font-size: 23;
-	padding: 17px 0 17px 0;
-}
+
 .table{
 	margin-top: 200px;
 	transform: scale(1);
@@ -137,4 +130,9 @@ li{
 	margin-bottom: 0px;
 	color: black;
 
+}
+@media screen and (max-width: 780px){
+	header:before{
+		content: none;
+	}
 }
