--- a/style.css
+++ b/style.css
@@ -81,6 +81,11 @@ footer{
 	bottom: 0px;
 	position: relative;
 }
+span{
+	font-size: 1.5em;
+	color: white ;
+	margin-top: auto;
+}
 .results{
 	width: 70.422535%;
 	margin: 50px auto 40px auto;
@@ -100,7 +105,7 @@ footer{
 	width: 100%;
 	background: #292b2e;
 	margin: 15px 0 10px 0;
-	font-size: 23;
+	font-size: 2em;
 	padding: 17px 0 17px 0;
 }
 .reverseresult{
