--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html{
 }
 body{
 	margin: 0 0 0 0;
-	background-color: #fff;
+	background-color: #15ffe6;
 	text-align: center;
 	background-image: url(bg-pattern.png);
 }
